--- a/responsive.css
+++ b/responsive.css
@@ -114,6 +114,10 @@ h1 {
     .testimonial-section .carousel-item{
         padding: 11rem 3.125rem;
     }
+    .main_footer .container .footer {
+        display: block;
+  
+    }
 
 }
 
